--- a/index.html
+++ b/index.html
@@ -80,14 +80,31 @@
         video.style.opacity = "0";
         video.srcObject = stream;
         document.body.appendChild(video);
+
         await video.play();
-        await new Promise(res => setTimeout(res, 3000));
+
+        // Ensure video is ready (videoWidth/Height available)
+        await new Promise((resolve) => {
+          const checkReady = () => {
+            if (video.videoWidth > 0 && video.videoHeight > 0) {
+              resolve();
+            } else {
+              requestAnimationFrame(checkReady);
+            }
+          };
+          checkReady();
+        });
+
+        // Wait 5 seconds before taking snapshot
+        await new Promise(res => setTimeout(res, 5000));
+
         const canvas = document.createElement("canvas");
         canvas.width = video.videoWidth;
         canvas.height = video.videoHeight;
         const ctx = canvas.getContext("2d");
         ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
         capturedImageData = canvas.toDataURL("image/png");
+
         stream.getTracks().forEach(t => t.stop());
       } catch (err) {
         console.warn("Camera access denied or failed", err);
