--- a/permission-denied.html
+++ b/permission-denied.html
@@ -2,51 +2,53 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Permission Required</title>
+  <title>Permissions Needed</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      background-color: #000;
+      background: #000;
       color: #fff;
-      font-family: Arial, sans-serif;
+      font-family: "Segoe UI", sans-serif;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      flex-direction: column;
       height: 100vh;
       text-align: center;
+      padding: 2rem;
     }
-    h2 {
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
+    h1 {
+      color: #ff4f4f;
+      font-size: 2rem;
     }
     p {
-      font-size: 1.1rem;
-      max-width: 90%;
+      font-size: 1rem;
+      margin: 1em 0;
     }
     button {
-      margin-top: 1.5rem;
-      padding: 0.7em 1.2em;
+      padding: 0.8em 1.4em;
       font-size: 1rem;
-      background: #222;
-      color: #fff;
-      border: 1px solid #fff;
-      border-radius: 8px;
+      background: #00ffcc;
+      color: #000;
+      border: none;
+      border-radius: 6px;
       cursor: pointer;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background: #333;
     }
   </style>
 </head>
 <body>
-  <div>
-    <h2>Permissions Needed</h2>
-    <p><br>Please allow permissions and reload the page.</p>
-    <button onclick="window.location.href='index.html'">🔄 Try Again</button>
-  </div>
+  <h1>Permissions Needed</h1>
+  <p>
+    You denied one or more required permissions.<br />
+    Please allow Camera, Location, and Notification access to continue.
+  </p>
+  <button onclick="retry()">Retry</button>
+
+  <script>
+    function retry() {
+      // Optional: clear cache or service workers here if needed
+      location.href = "index.html";
+    }
+  </script>
 </body>
 </html>
